# notable

./: .gitignore  README.md  README_local.md  alsa-compile.sh  output.txt  testAudioFiles.txt
Maximilian-master/src/: maximilian.cpp  maximilian.h  maximilianRecording.cpp  maximilianRecording.h
Maximilian-master/src/libs/: maxiAtoms.h  maxiBark.h  maxiConvolve.cpp  maxiFFT.cpp  maxiGrains.h
NoteDetection/: CMakeLists.txt  FastFourierTransform.cpp  FastFourierTransform.h  MidiGenerator.cpp  MidiGenerator.h  MidiGenrator.cpp  NoteDetection.cmake  QConstTrans.cpp  QConstTrans.h  build.sh  cmd_build.sh  cmd_build_2.sh  cmd_build_fast.sh  instruments.h  main.cpp  player.cpp  player.h
constant-q-cpp-master/: Makefile.linux  Modifications.txt
constant-q-cpp-master/test/: TestCQFrequency  TestCQKernel  TestCQTime  TestFFT  TestMathUtilities  TestResampler  TestWindow  processfile
vamp-plugin-sdk/: .hg_archival.txt
vamp-plugin-sdk-bin/vamp-plugin-sdk-2.10.0-binaries-amd64-linux/: vamp-rdf-template-generator  vamp-simple-host
vamp-plugin-sdk-bin/vamp-plugin-sdk-2.10.0-binaries-macos/: libvamp-hostsdk.dylib  libvamp-sdk.dylib  vamp-example-plugins.dylib  vamp-rdf-template-generator  vamp-simple-host
vamp-plugin-sdk-bin/vamp-plugin-sdk-2.10.0-binaries-win64-msvc2017/: VampPluginSDK.lib
